Added the new tooltip code, as well as some attempts at implementing text wrapping

--- a/Noah_Threat_Timeline/default/savedsearches.conf
+++ b/Noah_Threat_Timeline/default/savedsearches.conf
@@ -1,8 +1,12 @@
 [default]
 # Set property defaults
+# Created by Danae O'Connor
 
+#Default for the actual visualization
 display.visualization.custom.Threat_Timeline.threat_Timeline.viewTime_TF = No
-display.visualization.custom.Threat_Timeline.threat_Timelinew.maxCardStack = 20
+
+
+#Default Colors for Tactic Coloration
 display.visualization.custom.Threat_Timeline.threat_Timeline.Recon_Color = #f9e98e
 display.visualization.custom.Threat_Timeline.threat_Timeline.ReSrs_Color = #ffd060
 display.visualization.custom.Threat_Timeline.threat_Timeline.InAccess_Color = #ffc336
