--- a/Threat_Timeline/default/app.conf
+++ b/Threat_Timeline/default/app.conf
@@ -4,6 +4,7 @@
 
 [install]
 is_configured = $${configured}
+install_source_checksum = c961d53ad48c9e1aa5521654d16f2e8d64276a6b
 
 [ui]
 is_visible = $${visible}
